** It does not impact deployment within the `ROOT` context like Spring-boot which do not have such context path prefix.


[float]
===== Features
* Improved capturing of logged exceptions when using Log4j2 - {pull}2139[#2139]
* Update to async-profiler 1.8.7 and set configured `safemode` at load time though a new system property - {pull}2165[#2165]

[float]
===== Performance improvements
* Disable compression when sending data to a local APM Server

[float]
===== Bug fixes
* Fix k8s metadata discovery for containerd-cri envs - {pull}2126[#2126]
* Fixing/reducing startup delays related to `ensureInstrumented` - {pull}2150[#2150]

[float]
===== Refactorings
* Loading the agent from an isolated class loader - {pull}2109[#2109]
* Refactorings in the `apm-agent-plugin-sdk` that may imply breaking changes for beta users of the external plugin mechanism
** `WeakMapSupplier.createMap()` is now `WeakConcurrent.buildMap()` and contains more builders - {pull}2136[#2136]
** `GlobalThreadLocal` has been removed in favor of `DetachedThreadLocal`. To make it global, use `GlobalVariables` - {pull}2136[#2136]
** `DynamicTransformer.Accessor.get().ensureInstrumented` is now `DynamicTransformer.ensureInstrumented` - {pull}#2164[#2164]
* Switching last instrumentations (`trace_methods`, sparkjava, JDK `HttpServer` and Struts 2) to
`TracerAwareInstrumentation` - {pull}#2170[#2170]
* Replace concurrency plugin maps to `SpanConcurrentHashMap` ones - {pull}#2173[#2173]

[[release-notes-1.x]]
=== Java Agent version 1.x

[[release-notes-1.26.0]]
==== 1.26.0 - 2021/09/14

===== Potentially breaking changes
* If you rely on Database span subtype and use Microsoft SQL Server, the span subtype has been changed from `sqlserver`
to `mssql` to align with other agents.

[float]
===== Breaking changes
* Stop collecting the field `http.request.socket.encrypted` in http requests - {pull}2136[#2136]

[float]
===== Features
* Improved naming for Spring controllers - {pull}1906[#1906]