@@ -902,7 +902,9 @@ public class DslJsonSerializer implements PayloadSerializer {
                 jw.writeByte(OBJECT_END);
                 jw.writeByte(COMMA);
             }
-
+            if (message.getRoutingKey() != null && !message.getRoutingKey().isEmpty()) {
+                writeField("routing_key", message.getRoutingKey());
+            }
             writeFieldName("queue");
             jw.writeByte(OBJECT_START);
             writeLastField("name", message.getQueueName());
