@@ -324,7 +324,7 @@ public class RabbitMQIT extends AbstractInstrumentationTest {
         reporter.awaitSpanCount(1);
 
         Span pollingSpan = reporter.getFirstSpan();
-        checkPollSpan(pollingSpan, queueName, "<unknown>");
+        checkPollSpan(pollingSpan, queueName, "<unknown>", false);
     }
 
     @Test
@@ -340,7 +340,7 @@ public class RabbitMQIT extends AbstractInstrumentationTest {
         reporter.awaitSpanCount(1);
 
         Span pollingSpan = reporter.getFirstSpan();
-        checkPollSpan(pollingSpan, queueName, exchange);
+        checkPollSpan(pollingSpan, queueName, exchange, true);
     }
 
 
@@ -617,14 +617,19 @@ public class RabbitMQIT extends AbstractInstrumentationTest {
 
         assertThat(transaction.getOutcome()).isEqualTo(Outcome.SUCCESS);
 
-        checkMessage(transaction.getContext().getMessage(), exchange);
+        checkMessage(transaction.getContext().getMessage(), exchange, true);
     }
 
-    private static void checkMessage(Message message, String queueName) {
+    private static void checkMessage(Message message, String queueName, boolean withRoutingKeyCheck) {
         assertThat(message.getQueueName()).isEqualTo(queueName);
 
         // RabbitMQ does not provide timestamp by default
         assertThat(message.getAge()).isLessThan(0);
+        if (withRoutingKeyCheck) {
+            assertThat(message.getRoutingKey()).isNotBlank();
+        } else {
+            assertThat(message.getRoutingKey()).isNull();
+        }
     }
 
 
@@ -677,17 +682,19 @@ public class RabbitMQIT extends AbstractInstrumentationTest {
         checkSpanCommon(span,
             "send",
             String.format("RabbitMQ SEND to %s", exchangeName),
-            exchangeName
+            exchangeName,
+            true
         );
 
         checkSpanDestination(span, host, port, String.format("rabbitmq/%s", exchangeName));
     }
 
-    private static void checkPollSpan(Span span, String queue, String normalizedExchange) {
+    private static void checkPollSpan(Span span, String queue, String normalizedExchange, boolean withRoutingKeyCheck) {
         checkSpanCommon(span,
             "poll",
             String.format("RabbitMQ POLL from %s", queue),
-            queue);
+            queue,
+            withRoutingKeyCheck);
 
         checkSpanDestination(span,
             connection.getAddress().getHostAddress(),
@@ -696,7 +703,7 @@ public class RabbitMQIT extends AbstractInstrumentationTest {
         );
     }
 
-    private static void checkSpanCommon(Span span, String expectedAction, String expectedName, String expectedQueueName) {
+    private static void checkSpanCommon(Span span, String expectedAction, String expectedName, String expectedQueueName, boolean withRoutingKeyCheck) {
         assertThat(span.getType()).isEqualTo("messaging");
         assertThat(span.getSubtype()).isEqualTo("rabbitmq");
         assertThat(span.getAction()).isEqualTo(expectedAction);
@@ -704,7 +711,7 @@ public class RabbitMQIT extends AbstractInstrumentationTest {
         assertThat(span.getNameAsString())
             .isEqualTo(expectedName);
 
-        checkMessage(span.getContext().getMessage(), expectedQueueName);
+        checkMessage(span.getContext().getMessage(), expectedQueueName, withRoutingKeyCheck);
 
         assertThat(span.getOutcome()).isEqualTo(Outcome.SUCCESS);
     }
